force-app/main/default/objects/KDCE_OfflineProgram__c/KDCE_OfflineProgram__c.object-meta.xml
<CustomObject>
    <description>[KDCE] Offline Progrma (Trade-in, Upgrade, Rental, Replacement..)</description>
    <label>Offline Program</label>
    <nameField>
        <displayFormat>OP{YY}{MM}{DD}{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offline Program</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>