force-app/main/default/objects/KDCE_OfflineProgram__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offline Program</relationshipLabel>
    <relationshipName>OfflineProgram</relationshipName>
    <type>Lookup</type>
</CustomField>