force-app/main/default/objects/KDCE_OfflineProgram__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <referenceTo>KDCE_Coupon__c</referenceTo>
    <relationshipLabel>Offline Program</relationshipLabel>
    <relationshipName>OfflineProgram</relationshipName>
    <type>Lookup</type>
</CustomField>