force-app/main/default/objects/KDCE_OfflineProgram__c/fields/fm_ProductName__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductName__c</fullName>
    <formula>/*NewHolder__r.Product2.KDEC_POS_ProductName__c*/

NewHolder__r.Product2.KDCE_MG_ProductName_ko__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>