force-app/main/default/objects/KDCE_OfflineProgram__c/fields/NewCharger__c.field-meta.xml
<CustomField>
    <fullName>NewCharger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] New Charger after the program change</description>
    <label>New Charger</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Offline Program (New Charger)</relationshipLabel>
    <relationshipName>OfflineProgramNC</relationshipName>
    <type>Lookup</type>
</CustomField>