force-app/main/default/objects/KDCE_OfflineProgram__c/fields/NewHolder__c.field-meta.xml
<CustomField>
    <fullName>NewHolder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] New Holder after the program change</description>
    <label>New Holder</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Offline Program (New Holder)</relationshipLabel>
    <relationshipName>OfflineProgramNH</relationshipName>
    <type>Lookup</type>
</CustomField>