force-app/main/default/objects/KDCE_OfflineProgram__c/fields/OldCharger__c.field-meta.xml
<CustomField>
    <fullName>OldCharger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] Charger before the program change</description>
    <label>Old Charger</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Offline Program (Old Charger)</relationshipLabel>
    <relationshipName>OfflineProgramOC</relationshipName>
    <type>Lookup</type>
</CustomField>