force-app/main/default/objects/KDCE_OfflineProgram__c/fields/OldHolder__c.field-meta.xml
<CustomField>
    <fullName>OldHolder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] Holder before program change</description>
    <label>Old Holder</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Offline Program</relationshipLabel>
    <relationshipName>OfflineProgramOH</relationshipName>
    <type>Lookup</type>
</CustomField>