force-app/main/default/objects/KDCE_OfflineProgram__c/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <description>고객 Asset 구매일</description>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>