force-app/main/default/objects/KDCE_OfflineProgram__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Rental Process</fullName>
            </value>
            <value>
                <fullName>Rental Cancel</fullName>
            </value>
            <value>
                <fullName>Rental Closed</fullName>
            </value>
            <value>
                <fullName>Rental Purchase</fullName>
                <isActive>false</isActive>
                <label>Rental Purchase</label>
            </value>
            <value>
                <fullName>Rental Refund</fullName>
                <isActive>false</isActive>
                <label>Rental Refund</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>