force-app/main/default/objects/KDCE_OfflineProgram__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>KDCE_Store__c</referenceTo>
    <relationshipLabel>Offline Program</relationshipLabel>
    <relationshipName>OfflinePrograms</relationshipName>
    <type>Lookup</type>
</CustomField>