force-app/main/default/objects/KDCE_OfflineProgram__c/fields/testGodFather__c.field-meta.xml
<CustomField>
    <fullName>testGodFather__c</fullName>
    <formula>Contact__r.KDCE_GodFather__c == Coupon__r.Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testGodFather</label>
    <type>Checkbox</type>
</CustomField>