force-app/main/default/objects/KDCE_OfflineProgram__c/recordTypes/OfflineProgram_ZRN.recordType-meta.xml
<RecordType>
    <fullName>OfflineProgram_ZRN</fullName>
    <active>true</active>
    <description>[KDCE] Rental Record Type</description>
    <label>Rental</label>
</RecordType>