force-app/main/default/objects/KDCE_OfflineProgram__c/recordTypes/OfflineProgram_ZTA.recordType-meta.xml
<RecordType>
    <fullName>OfflineProgram_ZTA</fullName>
    <active>true</active>
    <description>[KDCE] Rental 제외 Record Type</description>
    <label>Normal</label>
</RecordType>