force-app/main/default/objects/KDCE_OfflineProgram__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>NewCharger__c</columns>
    <columns>NewHolder__c</columns>
    <columns>OldCharger__c</columns>
    <columns>OldHolder__c</columns>
    <columns>ProgramType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>