force-app/main/default/objects/KDCE_OfflineProgram__c/listViews/MC_UAT.listView-meta.xml
<ListView>
    <fullName>MC_UAT</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>NewCharger__c</columns>
    <columns>NewHolder__c</columns>
    <columns>OldCharger__c</columns>
    <columns>OldHolder__c</columns>
    <columns>ProgramType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>윤예지</value>
    </filters>
    <label>MC UAT</label>
</ListView>